--- a/css challenge/Almost there.html
+++ b/css challenge/Almost there.html
@@ -96,6 +96,7 @@
         align-items: center;
         font-size: 5rem;
         font-weight: 600;
+        color: #ff0040;
       }
       .right {
         display: grid;
@@ -103,7 +104,6 @@
       }
       .right > div {
         display: flex;
-        gap: 5px;
         justify-content: center;
         align-items: center;
         font-size: 1.5rem;
@@ -139,6 +139,21 @@
       }
       .grid-right-content > * {
         margin: 0;
+      }
+      .bd-white {
+        border-top: 5px solid white;
+        border-left: 5px solid white;
+        box-sizing: content-box;
+      }
+      .bd-white > div {
+        border-bottom: 5px solid white;
+        border-right: 5px solid white;
+      }
+      .bd-white > div > div:nth-child(1) {
+        border-bottom: 5px solid white;
+      }
+      .bd-white div {
+        color: white;
       }
     </style>
   </head>
