--- a/css challenge/Almost there.html
+++ b/css challenge/Almost there.html
@@ -143,75 +143,7 @@
     </style>
   </head>
   <body>
-    <div class="container-left">
-      <div class="grid-left">
-        <div class="grid-row">
-          <div class="grid-row-content left"></div>
-          <div class="grid-row-content center"></div>
-          <div class="grid-row-content right"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-row-content left">E-commerce</div>
-          <div class="grid-row-content center">UNIF</div>
-          <div class="grid-row-content right">
-            <div class="grid-row-content right-child">Design</div>
-            <div class="grid-row-content right-child">
-              <div class="grid-row-content right-child-button">Click</div>
-            </div>
-          </div>
-        </div>
-        <div class="grid-row bd-white">
-          <div class="grid-row-content left">E-commerce</div>
-          <div class="grid-row-content center">UNIF</div>
-          <div class="grid-row-content right">
-            <div class="grid-row-content right-child">Design</div>
-            <div class="grid-row-content right-child">
-              <div class="grid-row-content right-child-button">Click</div>
-            </div>
-          </div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-row-content left">E-commerce</div>
-          <div class="grid-row-content center">UNIF</div>
-          <div class="grid-row-content right">
-            <div class="grid-row-content right-child">Design</div>
-            <div class="grid-row-content right-child">
-              <div class="grid-row-content right-child-button">Click</div>
-            </div>
-          </div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-row-content left">E-commerce</div>
-          <div class="grid-row-content center">UNIF</div>
-          <div class="grid-row-content right">
-            <div class="grid-row-content right-child">Design</div>
-            <div class="grid-row-content right-child">
-              <div class="grid-row-content right-child-button">Click</div>
-            </div>
-          </div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-row-content left">E-commerce</div>
-          <div class="grid-row-content center">UNIF</div>
-          <div class="grid-row-content right">
-            <div class="grid-row-content right-child">Design</div>
-            <div class="grid-row-content right-child">
-              <div class="grid-row-content right-child-button">Click</div>
-            </div>
-          </div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-row-content left">E-commerce</div>
-          <div class="grid-row-content center">UNIF</div>
-          <div class="grid-row-content right">
-            <div class="grid-row-content right-child">Design</div>
-            <div class="grid-row-content right-child">
-              <div class="grid-row-content right-child-button">Click</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="container-left"></div>
     <div class="container-center">
       <div class="bc-pink">Special-Offers, INC.</div>
       <div class="bc-blue">2014 -> FOREVER</div>
